--- a/Lesson 13/Homework/hmw_l13.ipynb
+++ b/Lesson 13/Homework/hmw_l13.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 189,
    "id": "a3a38063",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "device(type='cpu')"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 190,
    "id": "7980ca7e",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 191,
    "id": "63df6322",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 192,
    "id": "463b8f3f",
    "metadata": {},
    "outputs": [],
@@ -162,13 +162,12 @@
     "            correct += (predicted == labels).sum().item()\n",
     "    return 100 * correct / total\n",
     "\n",
-    "def model_train(model, train_data, valid_data, name='undefined', save_fc=False):\n",
+    "def model_train(model, train_data, valid_data, optimizer, name='undefined', save_fc=False):\n",
     "    criterion = nn.CrossEntropyLoss()\n",
-    "    optimizer = torch.optim.Adam(model.fc.parameters(), lr=0.0001)\n",
     "    for epoch in range(NUM_EPOCHS):\n",
+    "        running_loss = 0.0\n",
     "        last_acc = 0.0\n",
     "        model.train()\n",
-    "        running_loss = 0.0\n",
     "        for inputs, labels in tqdm(train_data, desc=f'Epoch {epoch+1}'):\n",
     "            inputs, labels = inputs.to(DEVICE), labels.to(DEVICE)\n",
     "            optimizer.zero_grad()\n",
@@ -197,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "id": "fdf08abe",
    "metadata": {},
    "outputs": [
@@ -219,7 +218,9 @@
     "\n",
     "# Заменяем последний слой на 10 классов\n",
     "model.fc = nn.Linear(model.fc.in_features, 10)\n",
-    "model.fc.requires_grad = True # Разморозка последнего слоя\n",
+    "# Разморозка последнего слоя\n",
+    "for param in model.fc.parameters():\n",
+    "    param.requires_grad = True\n",
     "model = model.to(DEVICE)"
    ]
   },
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 197,
    "id": "d6f1f5d0",
    "metadata": {},
    "outputs": [
@@ -249,11 +250,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1: 100%|██████████| 296/296 [04:10<00:00,  1.18it/s]\n",
-      "Epoch 2: 100%|██████████| 296/296 [04:00<00:00,  1.23it/s]\n",
-      "Epoch 3: 100%|██████████| 296/296 [03:53<00:00,  1.27it/s]\n",
+      "Epoch 1: 100%|██████████| 296/296 [03:11<00:00,  1.54it/s]\n",
+      "Epoch 2: 100%|██████████| 296/296 [03:36<00:00,  1.37it/s]\n",
+      "Epoch 3: 100%|██████████| 296/296 [03:30<00:00,  1.41it/s]\n",
       "Epoch 4: 100%|██████████| 296/296 [03:56<00:00,  1.25it/s]\n",
-      "Epoch 5: 100%|██████████| 296/296 [03:33<00:00,  1.39it/s]\n"
+      "Epoch 5: 100%|██████████| 296/296 [03:44<00:00,  1.32it/s]\n"
      ]
     },
     {
@@ -269,7 +270,7 @@
     "optimizer = torch.optim.Adam(model.fc.parameters(), lr=0.0001)\n",
     "base_acc = 0.0\n",
     "\n",
-    "model, base_acc = model_train(model, imagenette_train, imagenette_val, optimizer, criterion,'imagenette_fc', True)\n",
+    "model, base_acc = model_train(model, imagenette_train, imagenette_val, optimizer,'imagenette_fc', True)\n",
     "print(f\"Базовая точность: {base_acc:.2f}%\")"
    ]
   },
@@ -278,19 +279,42 @@
    "id": "2e848f55",
    "metadata": {},
    "source": [
-    "## Шаг 4: Обучение на CIFAR10"
+    "## Шаг 4: Обучение на CIFAR10 (вся модель)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "id": "5221e659",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: 100%|██████████| 1563/1563 [46:13<00:00,  1.77s/it]\n",
+      "Epoch 2: 100%|██████████| 1563/1563 [44:53<00:00,  1.72s/it]\n",
+      "Epoch 3: 100%|██████████| 1563/1563 [47:25<00:00,  1.82s/it]\n",
+      "Epoch 4: 100%|██████████| 1563/1563 [46:48<00:00,  1.80s/it]\n",
+      "Epoch 5: 100%|██████████| 1563/1563 [49:11<00:00,  1.89s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CIFAR точность: 93.68%\n"
+     ]
+    }
+   ],
    "source": [
+    "# Разморозка\n",
+    "for param in model.parameters():\n",
+    "    param.requires_grad = True\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.0001)\n",
     "cifar_acc = 0.0\n",
     "\n",
-    "model, cifar_acc = model_train(model, cifar_train, cifar_val, save_fc=False)\n",
+    "model, cifar_acc = model_train(model, cifar_train, cifar_val,  optimizer, save_fc=False)\n",
     "print(f\"CIFAR точность: {cifar_acc:.2f}%\")"
    ]
   },
@@ -312,10 +336,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "id": "657ce945",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.fc.load_state_dict(torch.load('imagenette_fc.pth'))"
    ]
@@ -330,10 +365,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "id": "df38fa12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Базовая точность: 97.15%\n",
+      "\n",
+      "Точность с оригинальным слоем ImageNette: 3.80%\n"
+     ]
+    }
+   ],
    "source": [
     "new_acc = evaluate(model, imagenette_val)\n",
     "print(f\"Базовая точность: {base_acc:.2f}%\")\n",
@@ -353,19 +398,20 @@
    "id": "617e444a",
    "metadata": {},
    "source": [
-    "### 6.1 Заморозка последнего слоя"
+    "### 6.1 Заморозка слоев кроме последнего"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "id": "ad165e91",
    "metadata": {},
    "outputs": [],
    "source": [
     "for param in model.parameters():\n",
     "    param.requires_grad = False\n",
-    "model.fc.requires_grad = True"
+    "for param in model.fc.parameters():\n",
+    "    param.requires_grad = True"
    ]
   },
   {
@@ -373,19 +419,47 @@
    "id": "16e1889b",
    "metadata": {},
    "source": [
-    "### 6.2 Обучение на ImageNette"
+    "### 6.2 Обучение на ImageNette (последний слой)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "id": "4e81eb20",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1:   0%|          | 0/296 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: 100%|██████████| 296/296 [04:05<00:00,  1.21it/s]\n",
+      "Epoch 2: 100%|██████████| 296/296 [03:57<00:00,  1.25it/s]\n",
+      "Epoch 3: 100%|██████████| 296/296 [03:38<00:00,  1.36it/s]\n",
+      "Epoch 4: 100%|██████████| 296/296 [03:11<00:00,  1.55it/s]\n",
+      "Epoch 5: 100%|██████████| 296/296 [03:09<00:00,  1.56it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Базовая точность: 97.15%\n",
+      "Попытка вернуть точность: 69.68%\n"
+     ]
+    }
+   ],
    "source": [
+    "optimizer = torch.optim.Adam(model.fc.parameters(), lr=0.0001)\n",
     "last_acc = 0.0\n",
     "\n",
-    "model, last_acc = model_train(model, imagenette_train, imagenette_val, save_fc=False)\n",
+    "model, last_acc = model_train(model, imagenette_train, imagenette_val, optimizer, save_fc=False)\n",
     "\n",
     "print(f\"Базовая точность: {base_acc:.2f}%\")\n",
     "print(f\"Попытка вернуть точность: {last_acc:.2f}%\")"
