--- a/Lesson 13/Homework/hmw_l13.ipynb
+++ b/Lesson 13/Homework/hmw_l13.ipynb
@@ -478,7 +478,10 @@
    "id": "fea2cafe",
    "metadata": {},
    "source": [
-    "Текст вывода добавить"
+    "1) Замена и дообучение последнего слоя модели повышает точность.\n",
+    "2) Резкое падение точности модели при изменении весов последнего слоя, говорит о высокой специализации последнего слоя.\n",
+    "3) Повторное обучение только последнего слоя на ImageNette позволило вернуть точность до не рандомного выбора, тоесть фичи, извлеченные предобученными слоями, остаются релевантными, тоесть не обязательно обучать всю модель под новую специализацию.\n",
+    "4) Обучение только последнего слоя требует в несколько раз меньше времени на обучение\n"
    ]
   }
  ],
