--- a/Lesson 17/Homework/detectron2VSultralytics.ipynb
+++ b/Lesson 17/Homework/detectron2VSultralytics.ipynb
@@ -1,1 +1,19 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "b74bf7c7",
+   "metadata": {},
+   "source": [
+    "begin"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
